--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,11 @@
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
+    
+    <div class="input-group">
+      <%= f.label :username, class:"label" %>
+      <%= f.text_field :username, class:"input" %>
+    </div>
 
     <div class="input-group">
       <%= f.label :name, class:"label" %>
